# INF442-proj

./: .gitignore  BoruvkaDistributed.cpp  BoruvkaDistributed.hpp  CMakeLists.txt  DataLoader.cpp  DataLoader.h  GHSMpi.cpp  GHSMpi.hpp  Graph.cpp  Graph.h  GraphMpi.cpp  GraphMpi.hpp  Kruskal.cpp  Kruskal.hpp  KruskalClustering.cpp  KruskalClustering.h  KruskalClustering.hpp  PrimAndBoruvka.cpp  PrimAndBoruvka.hpp  PrimDistributed.cpp  PrimDistributed.hpp  README.md  Task1.cpp  Task2.cpp  Task3.cpp  Task3Boruvka.cpp  Task3Prim.cpp  Task4.cpp  Task5.cpp  Task6.cpp  cereals.csv  kmeans.cpp  kmeans.hpp  test_in.txt
